fix(apps/web): single article link contrast

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -78,7 +78,7 @@
 
 .article-container a,
 .ProseMirror a {
-  @apply text-blue-500 no-underline duration-200 hover:text-blue-600 hover:underline;
+  @apply text-blue-600 no-underline duration-200 hover:text-blue-700 hover:underline;
 }
 
 .article-container ul li,
